examples/errors/redefinition_of_function.alan
main(): proc
    foo(): int{return 42;}

    foo(): int{return 17;}
{}